# shalstm

./: .gitignore  LICENSE  README.md  build-sp-unigram-tokenizer.ipynb  generate.py  main.py  model.py  run_distributed.sh  run_small.sh  setup.cfg  utils.py
cls/: eval.py  model.py  p_model.py  train.py
config/: base.json  base_exp.json  large.json  small.json  small_exp.json  small_exp2.json  tweets_config.json  xsmall.json
generated_samples/: base.txt  small.txt  xlarge.txt
lm/: dist.py  eval.py  generate.py  train.py  train_apex.py  train_exp.py
qa/: __init__.py  eval.py  model.py  train.py
scripts/: filter.py  run_base.sh  run_demo.sh  run_enwik8_exps.sh  run_small.sh  run_tpu.sh  run_unifiedqa.sh  run_wiki_exps.sh  train_exp.sh  train_exp2.sh  train_full.sh  train_multi_gpu.sh  train_multi_gpu_demo.sh  train_tweets.sh
shalstm/: __init__.py  adaptive.py  attention.py  attn.py  lstmblock.py  model.py  optim.py  splitsoftmax.py  utils.py
shalstm/cls/: __init__.py  model.py  train.py
shalstm/config/: __init__.py
shalstm/lm/: dist.py  eval.py  generate.py  model.py  train.py
shalstm/model/: __init__.py  adaptive.py  attn.py  lstmblock.py  model.py  (+1 more)
tokenization/: build_bbpe_tokenizer.py  build_sp_tokenizer.py  compare-tokenizers.ipynb  extract_stats.py  pile_trn_00_stats.json
tokenizer/: __init__.py  build_sp_tokenizer.py  compare-tokenizers.ipynb  extract_jsonl.py  preprocess_parallel.py  tokenizer.json  tokenizer.py  uncased_tokenizer.json
train/: dist.py  dist_example.py  eval.py  main-dist.py  main.py  train.py
utils/: generate.py
(+37 files in other folders)
