[metadata]
name = shalstm
version = 0.1.0
author = Ali Safaya
author_email = alisafaya@gmail.com
description = Wrapper for Single Headed Attention
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/alisafaya/shalstm/
download_url = https://github.com/alisafaya/shalstm/archive/v0.1.0.tar.gz
classifiers =
    Topic :: Scientific/Engineering :: Artificial Intelligence
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >=3.6